--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ reactpy = "^1.0.2"
 fastapi = "^0.103.0"
 uvicorn = {extras = ["standard"], version = "^0.24.0"}
 pytest-asyncio = ">=0.17"
+reactpy-router = "^0.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
