--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,28 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch Chrome",
+      "request": "launch",
+      "type": "chrome",
+      "url": "http://vscode-dev:82",
+      "webRoot": "${workspaceFolder}",
+      "sourceMaps": true,
+
+      // Chrome debugger address:
+      // http://vscode-dev:82/_reactpy/js/src/index.js
+      //
+      // js/src/index.js
+
+      "sourceMapPathOverrides": {
+        "/_reactpy/*": "${workspaceFolder}/*",
+        "\\workspace\\reactpy-dashboard\\_reactpy\\js\\src\\*" : "${workspaceFolder}/js/src/*",
+        "/workspace/reactpy-dashboard/_reactpy/js/src/*" : "${workspaceFolder}/js/src/*" 
+      },
+      "internalConsoleOptions": "openOnSessionStart",
+
+    },
+
+    {
       "name": "1. usage.py",
       "type": "python",
       "request": "launch",
@@ -12,27 +34,38 @@
       "program": "usage.py",
       "args": [
         "runserver",
-        "--port",
-        "3000"
+        "--host", "0.0.0.0",
+        "--port", "8000"
+      ],
+      "console": "internalConsole",
+      "internalConsoleOptions": "openOnSessionStart",
+      "justMyCode": false,
+      "serverReadyAction": {
+        "pattern": "Uvicorn running on (.*)/",
+        "uriFormat": "%s/",
+        "action": "debugWithChrome"
+      }
+    },
+    {
+      "name": "1a. app_main_router_test.py",
+      "type": "python",
+      "request": "launch",
+      "cwd": "${workspaceRoot}",
+      "program": "app_main_router_test.py",
+      "args": [
+        "runserver",
+        "--host", "0.0.0.0",
+        "--port", "8000"
       ],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart",
       "justMyCode": false,
       // "serverReadyAction": {
-      //   "pattern": "Uvicorn running on (.*)/",
-      //   "uriFormat": "%s/",
-      //   "action": "debugWithChrome"
+      //   "pattern": "Running on (.*)/",
+      //   "uriFormat": "%s",
+      //   "action": "debugWithChrome",
+      //   "killOnServerStop": true
       // }
-    },
-    {
-      "name": "1a. app_main.py",
-      "type": "python",
-      "request": "launch",
-      "cwd": "${workspaceRoot}",
-      "program": "app_main.py",
-     "console": "internalConsole",
-      "internalConsoleOptions": "openOnSessionStart",
-      "justMyCode": false
     },
     {
       "name": "2a. PyTest (all)",
