--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ reactpy = "^1.0.2"
 fastapi = "^0.103.0"
 uvicorn = {extras = ["standard"], version = "^0.24.0"}
 pytest-asyncio = ">=0.17"
+reactpy-router = {version = "^0.1.1", source = "pypicloud"}
 
 
 [tool.poetry.group.dev.dependencies]
@@ -19,6 +20,12 @@ pytest-env = "1.0.1"
 httpx = ">=0.23.0,<0.25.0"
 pytest-playwright = "^0.4.3"
 
+
+
+[[tool.poetry.source]]
+name = "pypicloud"
+url = "http://debian-server:6543/simple/"
+priority = "supplemental"
 
 [build-system]
 requires = ["poetry-core"]
