--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,20 +6,26 @@ authors = ["Steve Jones <jonesst2608@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-reactpy = "^1.0.2"
-fastapi = "^0.103.0"
-uvicorn = {extras = ["standard"], version = "^0.24.0"}
-pytest-asyncio = ">=0.17"
-reactpy-router = {version = "^0.1.1", source = "pypicloud"}
+python = "^3.11.0"
 
+reactpy = "^1.0.2"
+reactpy-router = {version = "^0.1.1", source = "pypicloud"}
+fastapi = "0.96.0"
+uvicorn = "0.22.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = ">= 7.1.3, < 8.0.0"
-pytest-env = "1.0.1"
-httpx = ">=0.23.0,<0.25.0"
-pytest-playwright = "^0.4.3"
 
+annotated-types = "0.6.0"
+playwright = "1.34.0"
+pydantic-core = "2.14.3"
+pytest-asyncio = "0.21.1"
+pytest-mock = "3.12.0"
+pytest-rerunfailures = "12.0"
+pytest-timeout = "2.2.0"
+python-dotenv = "1.0.0"
+responses = "0.24.1"
+sanic-cors = "2.2.0"
+sanic-testing = "23.6.0"
 
 
 [[tool.poetry.source]]
@@ -30,3 +36,6 @@ priority = "supplemental"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+# jsonpointer playwright pytest pytest-asyncio>=0.17 pytest-mock>=3.12.0 pytest-rerunfailures pytest-timeout responses sanic-testing
