--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ reactpy = "^1.0.2"
 reactpy-router = {version = "^0.1.1", source = "pypicloud"}
 fastapi = "0.96.0"
 uvicorn = "0.22.0"
+pydantic = "1.10.13"
 
 [tool.poetry.group.dev.dependencies]
 
