--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,12 @@ reactpy = "^1.0.2"
 reactpy-router = {version = "^0.1.1", source = "pypicloud"}
 fastapi = "0.96.0"
 uvicorn = "0.22.0"
-pydantic = "1.10.13"
+pydantic - " 1.10.13"
 
 [tool.poetry.group.dev.dependencies]
 
 annotated-types = "0.6.0"
 playwright = "1.34.0"
-pydantic-core = "2.14.3"
 pytest-asyncio = "0.21.1"
 pytest-mock = "3.12.0"
 pytest-rerunfailures = "12.0"
