--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -75,6 +75,18 @@
     },
 
     {
+      "name": "1e. tmp/args_test.py",
+      "type": "python",
+      "request": "launch",
+      "cwd": "${workspaceRoot}",
+      "module": "tmp.args_test",
+      "console": "internalConsole",
+      "internalConsoleOptions": "openOnSessionStart",
+      "justMyCode": false,
+    },
+ 
+
+    {
       "name": "2a. PyTest (all)",
       "type": "python",
       "request": "launch",
@@ -99,6 +111,23 @@
       "args": [
         "-o log_cli=1",
         "tests/test_form.py",
+        "--headed"
+      ],
+      "cwd": "${workspaceRoot}",
+      "console": "internalConsole",
+      "internalConsoleOptions": "openOnSessionStart",
+      "justMyCode": false
+    },
+
+    {
+      "name": "2c. PyTest (test_complex_form.py)",
+      "type": "python",
+      "request": "launch",
+      "stopOnEntry": false,
+      "module": "pytest",
+      "args": [
+        "-o log_cli=1",
+        "tests/test_complex_form.py",
         "--headed"
       ],
       "cwd": "${workspaceRoot}",
