Testing dark mode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
       "justMyCode": false,
       "serverReadyAction": {
         "pattern": "Uvicorn running on\\s+(https?://\\S+)",
-        "uriFormat": "%s/not-found",
+        "uriFormat": "%s/",
         "action": "debugWithChrome",
         "killOnServerStop": true
       }
