--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ reactpy-router = {version = "^0.1.1", source = "pypicloud"}
 fastapi = "0.96.0"
 uvicorn = "0.22.0"
 pydantic = " 1.10.13"
+reactpy-apexcharts = {version = "0.0.3", source = "pypicloud"}
 
 [tool.poetry.group.dev.dependencies]
 
@@ -38,6 +39,3 @@ priority = "supplemental"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-
-# jsonpointer playwright pytest pytest-asyncio>=0.17 pytest-mock>=3.12.0 pytest-rerunfailures pytest-timeout responses sanic-testing
