--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ fastapi = "0.96.0"
 uvicorn = "0.22.0"
 pydantic = " 1.10.13"
 reactpy-apexcharts = {version = "0.0.3", source = "pypicloud"}
+reactpy-github-buttons = "^0.0.4"
 
 [tool.poetry.group.dev.dependencies]
 
