Upgrade to latest reactpy-pexcharts

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,9 @@
       "request": "launch",
       "cwd": "${workspaceRoot}",
       "program": "run_dashboard.py",
-      "env": {
-        "REACTPY_DEBUG_MODE": "1"
-      },
+      // "env": {
+      //   "REACTPY_DEBUG_MODE": "1"
+      // },
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart",
       "justMyCode": false,
