--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,12 @@ readme = "README.md"
 python = "^3.11.0"
 
 reactpy = "^1.0.2"
-reactpy-router = {version = "^0.1.1", source = "pypicloud"}
 fastapi = "0.96.0"
 uvicorn = "0.22.0"
 pydantic = " 1.10.13"
 reactpy-apexcharts = "0.0.9"
 reactpy-github-buttons = "0.0.11"
+reactpy-router = {url = "https://raw.githubusercontent.com/stevej2608/reactpy-router/master/dist/reactpy_router-0.1.1-py2.py3-none-any.whl"}
 
 [tool.poetry.group.dev.dependencies]
 
