Modt of the typing now in place - no working

--- a/.pylintrc
+++ b/.pylintrc
@@ -636,6 +636,7 @@ init-import=no
 redefining-builtins-modules=six.moves,past.builtins,future.builtins,builtins,io
 
 [MASTER]
+
 disable=
     C0114, # missing-module-docstring
     C0116, # missing-function-docstring
@@ -643,3 +644,4 @@ disable=
     C0103, # invalid-name
     W0718, # broad-exception-caught
     W0621, # redefined-outer-name
+    E1131, # unsupported-binary-operation
