--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
         "neccecery",
         "pytest",
         "runserver"
+    ],
+    "python.analysis.typeCheckingMode": "standard",
+    "python.analysis.exclude": [
+        "tmp",
+        ".venv"
     ]
 }
