--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,14 @@ readme = "README.md"
 python = "^3.11.0"
 
 fastapi = "^0.109.0"
-reactpy = "^1.0.2"
+reactpy = "^1.1.0"
 reactpy-apexcharts = {path = "../reactpy-apexcharts", develop = true}
-reactpy-github-buttons = "0.0.12"
-# reactpy-router =  {path = "../reactpy-router", develop = true}
-reactpy-router = {url = " https://raw.githubusercontent.com/stevej2608/reactpy-router/v0.1.3/dist/reactpy_router-0.1.3-py2.py3-none-any.whl"}
+reactpy-github-buttons = "0.0.14"
+reactpy-router = "1.0.4"
 uvicorn = "0.22.0"
-reactpy-table = "0.0.14"
-reactpy-forms = "0.0.2"
+reactpy-table = "0.0.15"
+reactpy-forms = "0.0.8"
+reactpy-utils = "^0.0.33"
 
 [tool.poetry.group.dev.dependencies]
 
@@ -41,17 +41,13 @@ line-length = 120
 typeCheckingMode = "strict"
 pythonVersion = "3.11"
 reportMissingTypeStubs = false
+ignore = ["tmp"]
 
 [tool.pytest.ini_options]
 testpaths = "tests"
 log_cli_level = "INFO"
 filterwarnings = "ignore::DeprecationWarning"
 
-
-[[tool.poetry.source]]
-name = "pypicloud"
-url = "http://debian-server:6543/simple/"
-priority = "supplemental"
 
 [build-system]
 requires = ["poetry-core"]
